[package]
name = "try_map"
version = "0.3.1"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
description = "`try_map` and `flip` methods for `Option`. These allow more ergonomic error handling when mapping functions that return `Result` over `Option`."
license = "Apache-2.0/MIT"
repository = "https://github.com/golddranks/try_map"
readme = "README.md"

[dependencies]
